# emailer-service

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: emailer.rs  error.rs  get_profile.rs  interface.rs  main.rs  shared_object.rs  task_manager.rs
src/interface/: curl.rs  mock.rs  production.rs
