[package]
name = "emailer-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-curl = "0.2"
async-trait = "0.1"
chrono = "0.4"
curl-http-client = "0.2"
fern = "0.6"
http = "0.2"
ipc-server = {git = "https://github.com/LorenzoLeonardo/ipc-server.git", branch = "master"}
log = "0.4"
mail-send = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.33", features = ["rt"] }
